# BTModToolkit

./: .gitignore  Readme.md
ModProj/: .cursorrules  PROJECT_PROMPT.md
UnityMCP/: LICENSE.txt
UnityMCP/UnityMcpServer/src/: Dockerfile  __init__.py  config.py  pyproject.toml  server.py  unity_connection.py
UnityMCP/UnityMcpServer/src/UnityMcpServer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
UnityMCP/UnityMcpServer/src/tools/: __init__.py  execute_menu_item.py  manage_asset.py  manage_editor.py  manage_gameobject.py  manage_scene.py  manage_script.py  manage_shader.py  read_console.py
docs/: CNAME  annotated.html  class_a_x_m_controller-members.html  class_a_x_m_controller.html  class_android_ultimate_plugin_1_1_helpers_1_1_editor_1_1_find_missing_scripts_recursively-members.html  class_android_ultimate_plugin_1_1_helpers_1_1_editor_1_1_find_missing_scripts_recursively.html  class_aws_config-members.html  class_aws_config.html  class_aws_region_config-members.html  class_aws_region_config.html  class_aws_region_config_1_1_network_region_config_data-members.html  class_aws_region_config_1_1_network_region_config_data.html  class_aws_services-members.html  class_aws_services.html  class_aws_services_1_1_aws_room-members.html  class_aws_services_1_1_aws_room.html  class_aws_services_1_1_create_room_info-members.html  class_aws_services_1_1_create_room_info.html  class_aws_services_1_1_d_s_room_info-members.html  class_aws_services_1_1_d_s_room_info.html  class_c_s_v_reader-members.html  class_c_s_v_reader.html  class_character_face_direction.html  (+2934 more)
(+1783 files in other folders)
